# pdfraster

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pdfraster.sln
common/: build.common.props
demo_low_level/: demo_low_level.vcxproj
demo_raster_encoder/: Makefile  bw1_ccitt_strip_data.h  demo_raster_encoder.c  demo_raster_encoder.vcxproj  gray8_page_strip.h  split_bw1_ccitt.sh  split_gray8_page.sh
icc_profile/: icc_profile.vcxproj
openssl/x64_Debug/lib/: libcrypto.lib  libssl.lib
openssl/x64_Release/lib/: libcrypto.lib  libssl.lib
openssl/x86_Debug/lib/: libcrypto.lib  libssl.lib
openssl/x86_Release/lib/: libcrypto.lib  libssl.lib
pdfras_digitalsignature/: certificate.p12  pdfras_digitalsignature.c  pdfras_digitalsignature.def  pdfras_digitalsignature.h  pdfras_digitalsignature.vcxproj  pdfras_digitalsignature.vcxproj.filters  pdfras_digitalsignature_windows.c  pdfras_digitalsignature_windows.h
pdfras_encryption/: aes_crypter.c  aes_crypter.h  pdfras_data_structures.h  pdfras_encryption.c  pdfras_encryption.def  pdfras_encryption.h  pdfras_encryption.vcxproj  pdfras_encryption.vcxproj.filters  pubsec.c  pubsec.h  rc4_crypter.c  rc4_crypter.h  recipient.c  recipient.h
pdfras_platform/: PdfPlatform.h  pdfras_platform.vcxproj  pdfras_platform.vcxproj.filters
pdfras_reader/: Makefile  pdfras_reader.vcxproj  pdfrasread.c  pdfrasread.def  pdfrasread.h  pdfrasread_files.c  pdfrasread_files.h  pdfrasread_postbuild.bat
pdfras_reader_managed/: AssemblyInfo.cpp  PdfRasterReader.cpp  PdfRasterReader.h  pdfras_reader_managed.vcxproj  pdfras_reader_managed.vcxproj.filters
pdfras_reader_tests/: pdfras_reader_tests.c  pdfras_reader_tests.vcxproj
pdfras_tool/: Makefile  app.cpp  application.cpp  application.h  configuration.cpp  configuration.h  error.cpp  error.h  handles.h  journal.cpp  journal.h  jpeg.cpp  jpeg.h  license.txt  main.cpp  os_specific.h  page.cpp  page.h  pdfras_tool.iss  pdfras_tool.vcxproj  pdfras_tool.vcxproj.filters  tiff.cpp  tiff.h
pdfras_writer/: Makefile  Makefile.platform  PdfAlloc.c  PdfAlloc.h  PdfArray.c  PdfArray.h  PdfAtoms.c  PdfContentsGenerator.c  PdfDatasink.c  PdfDate.c  PdfDate.h  PdfDict.c  PdfDict.h  PdfDigitalSignature.c  PdfDigitalSignature.h  PdfHash.c  PdfImage.c  PdfOS.h  PdfPlatform.h  PdfRaster.c  PdfRaster.h  PdfSecurityHandler.c  PdfSecurityHandler.h  PdfStandardObjects.c  PdfStreaming.c  PdfStreaming.h  PdfString.c  PdfValues.c  PdfXrefTable.c  pdfras_writer.vcxproj  pdfras_writer.vcxproj.filters  pdfraswrite.def
pdfras_writer_managed/: PdfRasterWriter.cpp  PdfRasterWriter.h  pdfras_writer_managed.vcxproj  pdfras_writer_managed.vcxproj.filters
pdfras_writer_tests/: pdfras_writer_tests.vcxproj  pdfraster_tests.c
security_sample/: security_sample.vcxproj
xxd/: xxd.vcxproj
